--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,23 @@
 @charset "utf-8";
 /* CSS Document */
 
+/*making font-sizes relative and putting them all in one place; based on
+"Confused About REM and EM?," https://j.eremy.net/confused-about-rem-and-em/
+reviewed 2019-07-15*/
+html, ul, li, #restaurants-list li a, #restaurant-address, #restaurant-cuisine  { font-size: 1em; }
+h1, { font-size: 1.50em; }
+h2, #restaurant-name, #reviews-container h2 { font-size: 1.40em; }
+h3, #breadcrumb, nav h1 a, #restaurants-list li h1 { font-size: 1.30em; }
+h4, .filter-options select, #restaurants-list p { font-size: 1.20em; }
+small, #footer { font-size: 0.9em; }
+.box { padding: 1.25em; }
+@media screen and (min-width: 1400px) {
+  html { font-size: 1.25em; }
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	/*font-size: 10pt;*/
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,12 +28,14 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	/*font-size: 10pt;*/
 	color: #333;
 }
 a {
 	color: orange;
 	text-decoration: none;
+  /*adding padding around a tags to make the touch points more isolated */
+  padding: 1.5em inherit;
 }
 a:hover, a:focus {
 	color: #3397db;
@@ -35,6 +51,14 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+/*to prevent images, etc. from overflowing viewport; based on UDAC lesson,
+"Max-width on elements, https://classroom.udacity.com/nanodegrees/nd001/parts/
+f9b11b6a-1f78-49e8-ba81-6097fd3d8239/modules/016c1719-1d80-4e80-9ad0-15016a84e1aa/
+lessons/94d40e3d-d0b8-4c04-bc92-036759492d28/concepts/35492694720923
+reviewed 2019-07-15*/
+img, embed, object, video {
+  max-width: 100%;
+}
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -42,7 +66,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  /*font-size: 8pt;*/
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -51,7 +75,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 90px;
   background-color: #252831;
   text-align:center;
 }
@@ -60,7 +84,7 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  /*font-size: 14pt;*/
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -69,9 +93,9 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    /*font-size: 17px;*/
     margin: 0;
-    width: calc(50% - 80px);
+    width: calc(100%);
 }
 
 /* Display list items side by side */
@@ -81,7 +105,7 @@ nav h1 a {
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
+    padding: 0.75em;
     color: black;
     content: "/\00a0";
 }
@@ -98,9 +122,16 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map {
-  height: 400px;
+/*#map {
+  height: 100%;
   width: 100%;
+  max-width: 100%;
+  background-color: #ccc;
+}*/
+#map-container {
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
@@ -109,6 +140,12 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+  /*centering the tabs; based on https://www.freecodecamp.org/news/
+  how-to-center-things-with-style-in-css-dc87b7542689/
+  reviewed 2019-07-16*/
+
+  */
+  text-align: center;
 }
 .filter-options h2 {
   color: white;
@@ -121,12 +158,12 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  /*font-size: 11pt;*/
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 40%;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -144,8 +181,9 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  /*centering and moving to relative width*/
+  text-align: center;
+  width: 90%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -158,7 +196,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  /*font-size: 14pt;*/
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -167,14 +205,14 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  /*font-size: 11pt;*/
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  /*font-size: 10pt;*/
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -210,7 +248,7 @@ nav h1 a {
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  /*font-size: 20pt;*/
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -219,15 +257,17 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 90%;
+  /*to prevent images from overflowing viewport*/
+  max-width: 90%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  /*font-size: 12pt;*/
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  /*font-size: 12pt;*/
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -247,7 +287,7 @@ nav h1 a {
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  /*font-size: 24pt;*/
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -258,7 +298,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -273,3 +313,18 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+
+/*REFERENCES RELIED UPON:
+"Max-width on elements, https://classroom.udacity.com/nanodegrees/nd001/parts/
+f9b11b6a-1f78-49e8-ba81-6097fd3d8239/modules/016c1719-1d80-4e80-9ad0-15016a84e1aa/
+lessons/94d40e3d-d0b8-4c04-bc92-036759492d28/concepts/35492694720923
+https://j.eremy.net/confused-about-rem-and-em/
+Above reviewed 2019-07-15
+https://www.freecodecamp.org/news/how-to-center-things-with-style-in-css-dc87b7542689/
+
+Above reviewed 2019-07-16
+
+
+
+*/
