--- a/css/styles.css
+++ b/css/styles.css
@@ -67,8 +67,8 @@ img, embed, object, video {
   background-color: #444;
   color: #aaa;
   /*font-size: 8pt;*/
-  letter-spacing: 1px;
-  padding: 25px;
+  letter-spacing: .1em;
+  padding: 1em;
   text-align: center;
   text-transform: uppercase;
 }
@@ -77,7 +77,7 @@ nav {
   width: 100%;
   height: 90px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
@@ -143,8 +143,6 @@ nav h1 a {
   /*centering the tabs; based on https://www.freecodecamp.org/news/
   how-to-center-things-with-style-in-css-dc87b7542689/
   reviewed 2019-07-16*/
-
-  */
   text-align: center;
 }
 .filter-options h2 {
@@ -171,26 +169,31 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 0 2em, 0, 2em;
   text-align: center;
+  padding-inline-start: 0;
+  text-align: center;
+  width: 100%;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
+  border-right: 1em;
+  border-left: 1em;
+  border: solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  /*padding: 0 2em, 0, 2em;*/
   /*centering and moving to relative width*/
   text-align: center;
-  width: 90%;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  min-height: 7em;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -214,7 +217,7 @@ nav h1 a {
   display: inline-block;
   /*font-size: 10pt;*/
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  /*padding: 8px 30px 10px;*/
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -229,11 +232,28 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  /*height reduced from 87%*/
+  height: 40%;
   position: fixed;
   right: 0;
   top: 80px;
-  width: 50%;
+  width: 100%;
+  /*adding order for flexbox*/
+  order: 1;
+  z-index: 500;
+}
+/*adding flexbox for 'inside' by styling #maincontent
+  can't do this on 'body' because it would affect index.html
+also putting this on #maincontent, rather than #main, because couldn't find
+  a #main
+old code follows*/
+/*.inside #main {
+  display: 100%;
+}
+*/
+.inside #maincontent {
+  display: flex;
+  flex-wrap: wrap;
 }
 .inside #map {
   background-color: #ccc;
@@ -242,8 +262,12 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: relative;
+/*  to center footer; see:
+  https://stackoverflow.com/questions/
+  15629511/how-can-i-make-my-footer-center-to-the-bottom-of-the-page/15629635;
+  reviewed 2019-07-17*/
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -256,9 +280,9 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
   /*to prevent images from overflowing viewport*/
-  max-width: 90%;
+  max-width: 100%;
 }
 #restaurant-address {
   /*font-size: 12pt;*/
@@ -279,11 +303,19 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 19em 2em 2em;
+  /*adding 100% width*/
+  width: 100%;
+  text-align: center;
+}
+#restaurant-container {
+  /*adding order for flexbox*/
+  order: 2;
 }
 #reviews-container {
   padding: 30px 40px 80px;
+  /*adding order for flexbox*/
+  order: 3;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -305,7 +337,8 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  /*changing to 100% width*/
+  width: 100%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -322,8 +355,12 @@ lessons/94d40e3d-d0b8-4c04-bc92-036759492d28/concepts/35492694720923
 https://j.eremy.net/confused-about-rem-and-em/
 Above reviewed 2019-07-15
 https://www.freecodecamp.org/news/how-to-center-things-with-style-in-css-dc87b7542689/
-
 Above reviewed 2019-07-16
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+https://stackoverflow.com/questions/15629511/
+how-can-i-make-my-footer-center-to-the-bottom-of-the-page/15629635
+
+Above reviewed 2019-07-17
 
 
 
